--- a/index.html
+++ b/index.html
@@ -77,6 +77,70 @@
             </div>
         </div>
     </div>
+    <!-- contact section -->
+    <section id="contact-section">
+        <div class="container">
+            <div class="contact text-white">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 py-5">
+                        <div class="contact-content" style="padding-top: 80px;">
+                            <div class="contact-head pb-2">
+                                <h3 class="display-4">Contact</h3>
+                            </div>
+                            <div class="contact-text pb-4">
+                                <p style="font-size: 14px;"><strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</strong> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                            </div>
+                            <div class="progress" style="height: 3px;">
+                                <div class="progress-bar bg-white" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <div class="contact-social pt-4">
+                                <div class="row">
+                                    <div class="col-lg-4 col-md-5 col-5">
+                                        <p class="fs-2">Follow Us</p>
+                                    </div>
+                                    <div class="col-lg-8 col-md-7 col-md-3 col-7 pt-2">
+                                        <div class="row">
+                                            <div class="col-lg-3 col-md-3 col-3">
+                                                <img src="img/contact-facebook.png" alt="Facebook">
+                                            </div>
+                                            <div class="col-lg-3 col-md-3 col-3">
+                                                <img src="img/contact-twitter.png" alt="Twitter">
+                                            </div>
+                                            <div class="col-lg-3 col-md-3 col-3">
+                                                <img src="img/contact-youtube.png" alt="YouTube">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 py-5">
+                        <div class="form">
+                            <form action="#">
+                                <div class="form-checkbox">
+                                    <input type="checkbox" name="" id="checkbox" class="me-2">
+                                    <label for="checkbox">Lorem Ipsum is simply dummy text of the printing</label>
+                                </div>
+                               <div class="row">
+                                   <div class="col-lg-6">
+                                        <div class="name-form" class="text-white">
+                                            <input type="text" name="name" class="form-control border-0 rounded-0" id="name" value="Name">
+                                        </div>
+                                   </div>
+                                   <div class="col-lg-6">
+                                    <div class="lastname-form" class="text-white">
+                                        <input type="text" name="lastname" class="form-control border-0 rounded-0" id="lastname" value="Last Name">
+                                    </div>
+                               </div>
+                               </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
 
 
