created an events-section

--- a/index.html
+++ b/index.html
@@ -142,7 +142,11 @@
         </div>
     </section>
     
-
+<section id="events-page">
+    <div class="container">
+        <p>Some text</p>
+    </div>
+</section>
 
 
 
