--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
         <div class="row mt-5 mb-4 text-center">
             <div class="col-lg-1">
                 <div class="card border-0 h-75 w-50" style="background-color: #B91869;">
-                    <p>accountant</p>
+                    <img src="img/Follow us.png" alt="" width="30%" class="mx-auto my-2">
+                    <img src="img/facebook.png" alt="" width="30%" class="mx-auto mb-2">
+                    <img src="img/twitter.png" alt="" width="40%" class="mx-auto mb-2">
+                    <img src="img/youtube.png" alt="" width="40%" class="mx-auto mb-5">
+                    <img src="img/Blog.png" alt="" width="40%" class="mx-auto mt-5">
+                    <img src="img/mail.png" alt="" width="40%" class="mx-auto mt-2">
                 </div>
             </div>
             <div class="col-lg-8 mx-auto">
@@ -143,7 +148,9 @@
     </section>
     
 
-
+    <div class="div d-flex">
+       
+    </div>
 
 
 
