--- a/event.html
+++ b/event.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- custom css -->
-    <link rel="stylesheet" href="css/landingstyle.css">
+    <link rel="stylesheet" href="css/eventstyle.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
