--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <title>HOME</title>
 </head>
 <body>
+    <!-- navbar and hero header -->
     <div class="firstview">
+        <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-trasnparent px-4 text-light">
             <div class="container-fluid">
                     <a class="navbar-brand text-light d-flex logo-text" href="#">
@@ -75,6 +77,7 @@
                 </div>
             </div>
         </div>
+        <!-- hero header -->
         <div class="container-fluid pe-4">
             <div class="row pb-5">
                 <div class="col-lg-9">
