final nav hero about muktano

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- custom css -->
-    <link rel="stylesheet" href="css/landing-sect1-2-style.css">
+    <link rel="stylesheet" href="css/simple-soul-style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/b353e23091.js" crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-trasnparent px-4 text-light">
             <div class="container-fluid">
                     <a class="navbar-brand text-light d-flex logo-text" href="#">
-                        <img src="img/logo.png" alt="" class="logo w-auto h-auto">
+                        <img src="simple-soul-img/logo.png" alt="" class="logo w-auto h-auto">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
                     <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active text-light d-flex justify-content-center align-items-center fw-bolder" aria-current="page" href="#">
-                            <img src="img/Vector.png" alt=""  class="me-1 logo w-100 h-auto"> Home</a>
+                            <img src="simple-soul-img/Vector.png" alt=""  class="me-1 logo w-100 h-auto"> Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -57,25 +57,25 @@
             <div class="row row1 mt-2 mb-1 text-center">
                 <div class="col-lg-1 mt-5 d-none d-lg-block">
                     <div class="card border-0 w-50" style="background-color: #B91869;">
-                        <img src="img/Follow us.png" alt=""  class="mx-auto my-2 logo w-auto h-auto">
-                        <img src="img/facebook.png" alt=""  class="mx-auto mb-2 w-auto h-auto">
-                        <img src="img/twitter.png" alt="" class="mx-auto mb-2 w-auto h-auto">
-                        <img src="img/youtube.png" alt=""  class="mx-auto mb-5 w-auto h-auto">
-                        <img src="img/Blog.png" alt=""  class="mx-auto mt-5 w-auto h-auto">
-                        <img src="img/mail.png" alt=""  class="mx-auto mt-2 mb-2 w-auto h-auto">
+                        <img src="simple-soul-img/Follow us.png" alt=""  class="mx-auto my-2 logo w-auto h-auto">
+                        <img src="simple-soul-img/facebook.png" alt=""  class="mx-auto mb-2 w-auto h-auto">
+                        <img src="simple-soul-img/twitter.png" alt="" class="mx-auto mb-2 w-auto h-auto">
+                        <img src="simple-soul-img/youtube.png" alt=""  class="mx-auto mb-5 w-auto h-auto">
+                        <img src="simple-soul-img/Blog.png" alt=""  class="mx-auto mt-5 w-auto h-auto">
+                        <img src="simple-soul-img/mail.png" alt=""  class="mx-auto mt-2 mb-2 w-auto h-auto">
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-8 mx-auto">
                     <div class="card py-5 bg-transparent border-0">
-                        <div class="section-2-img"><img src="/img/awesome.png" alt="" class="text-light mb-3 mt-5 awesome w-auto h-auto"></div>
-                        <h1 class="mx-2 text-light fw-bold">We Curate & Create <img src="/img/Frame.png" alt="" class="w-auto h-auto"></h1>
+                        <div class="section-2-img"><img src="/simple-soul-img/awesome.png" alt="" class="text-light mb-3 mt-5 awesome w-auto h-auto"></div>
+                        <h1 class="mx-2 text-light fw-bold">We Curate & Create <img src="/simple-soul-img/Frame.png" alt="" class="w-auto h-auto"></h1>
                         <h2 class="mx-2 text-danger pb-5 fw-bolder">Media, Conferences & Incentive Travel</h2>
-                        <img src="img/arrow down.png" alt="" class="mx-auto w-auto h-auto">
+                        <img src="simple-soul-img/arrow down.png" alt="" class="mx-auto w-auto h-auto">
                     </div>
                 </div>
                 <div class="col-lg-1 d-none d-lg-block">
                     <div class="card  border-0 text-right bg-transparent">
-                        <img src="img/Line 4.png" alt="" width="1px" height="350px" class="m-auto">
+                        <img src="simple-soul-img/Line 4.png" alt="" width="1px" height="350px" class="m-auto">
                     </div>
                 </div>
             </div>
@@ -88,10 +88,10 @@
                     <div class="card bg-transparent border-0 pe-3">
                         <div class="d-flex justify-content-end align-items-center">
                             <div>
-                                <img src="img/dotted.png" alt=""  class="w-auto h-auto me-4">
+                                <img src="simple-soul-img/dotted.png" alt=""  class="w-auto h-auto me-4">
                             </div>
                             <div>
-                                <img src="img/Scroll Down.png" alt=""  class="w-auto h-auto">
+                                <img src="simple-soul-img/Scroll Down.png" alt=""  class="w-auto h-auto">
                             </div>
                         </div> 
                     </div>
@@ -119,17 +119,17 @@
                             conference casts a diversity of participants drawn from the public sector, enterprise, and academia – providing them
                             with a platform for candid engagement is the default setting. 
                             </p>
-                            <img src="img/dotted.png" alt="" class="w-25 h-25">
+                            <img src="simple-soul-img/dotted.png" alt="" class="w-25 h-25">
                     </div>
                 </div>
             </div>
             <div class="row py-5">
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="card about-dif border-0 mt-2">
-                        <img src="img/Mkutano_II -323 2.png" alt="" >
+                        <img src="simple-soul-img/Mkutano_II -323 2.png" alt="" >
                         <div class="position-absolute p-4 pt-5">
                             <div class="about-wed text-center">
-                                <img src="img/Group 9.png" alt="" class="w-auto h-auto about-web">
+                                <img src="simple-soul-img/Group 9.png" alt="" class="w-auto h-auto about-web">
                             </div>
                         <h5 class="about-h text-light text-center mt-2">The Muktano</h5>
                         <p class="about-p mt-3">Lorem ipsum dolor sit amet consectetur 
@@ -141,25 +141,25 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="card bg-dark border-0 mt-2">
-                        <img src="img/Mkutano_II -323 1.png" alt="">
+                        <img src="simple-soul-img/Mkutano_II -323 1.png" alt="">
                         <div class="position-absolute about-emoji">
-                            <img src="img/Group 10.png" alt="">
+                            <img src="simple-soul-img/Group 10.png" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="card bg-dark border-0 mt-2">
-                        <img src="img/Mkutano_II -323 4.png" alt="">
+                        <img src="simple-soul-img/Mkutano_II -323 4.png" alt="">
                         <div class="position-absolute about-emoji">
-                            <img src="img/Group 11.png" alt="">
+                            <img src="simple-soul-img/Group 11.png" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="card bg-dark border-0 mt-2">
-                        <img src="img/Mkutano_II -323 4.png" alt="">
+                        <img src="simple-soul-img/Mkutano_II -323 4.png" alt="">
                         <div class="position-absolute about-emoji">
-                            <img src="img/Group 12.png" alt="">
+                            <img src="simple-soul-img/Group 12.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -176,21 +176,21 @@
                     <div class="card bg-transparent border-0">
                         <div class="bigger">
                             <div class="first-part d-flex mx-3">
-                                <img src="img/Group 82.png" alt="frame" style="width: 10%; height:auto; ">
+                                <img src="simple-soul-img/Group 82.png" alt="frame" style="width: 10%; height:auto; ">
                                 <h1>The <span class="color">Mkutano</span></h1>
-                                <img src="img/Frame1.png" alt="frame">
+                                <img src="simple-soul-img/Frame1.png" alt="frame">
                             </div>
                             <div class="second-part gap-5 d-flex">
                                 <h3>Economic Mkutano</h3>
                                 <h3>Energy Mkutano</h3>
                                 <h3>Tourism Mkutano</h3>
                             </div> 
-                                <img src="img/Line 15.png" alt="line">
+                                <img src="simple-soul-img/Line 15.png" alt="line">
                             <div class="lorem-part mb-3">
                                 <p><span class="thick">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span> Lorem<br> Ipsum has been the industry's standard dummy text ever since the 1500s, when an<br> unknown printer took a galley of type and scrambled it to make a type specimen book.<br> It has survived not only five centuries, but also the leap into electronic typesetting, remaining<br> essentially unchanged.</p>
                             </div>
                             <div class="info d-flex gap-3">
-                                <img src="img/Vector1.png" alt="vector" style="width: 4%; height:auto;">
+                                <img src="simple-soul-img/Vector1.png" alt="vector" style="width: 4%; height:auto;">
                                 <h4><span class="thick">More</span> info</h4>
                             </div>
                         </div>
@@ -198,7 +198,7 @@
                 </div>
                 <div class="col-lg-4 row2">
                     <div class="card bg-transparent border-0">
-                            <img src="img/image 6.png" alt="man" class="img-fluid w-auto h-25">
+                            <img src="simple-soul-img/image 6.png" alt="man" class="img-fluid w-auto h-25">
                     </div>
                 </div>
             </div>
