added navbar about

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>HOME</title>
 </head>
 <body>
-    <!-- navbar and hero header -->
+    <!-- navbar and hero header part -->
     <div class="firstview">
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-trasnparent px-4 text-light">
