--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <link rel="stylesheet" href="css/simple-soul-style.css">
     <link rel="stylesheet" href="css/khalid-style.css">
-    <link rel="stylesheet" href="section-6landingpage.css">
+    <link rel="stylesheet" href="css/section-6landingpage.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/b353e23091.js" crossorigin="anonymous"></script>
@@ -471,6 +471,236 @@
             </div>
         </div>
     </section>
+    <!-- testimonial section -->
+    <section id="testimonial-section" class="pb-5" style="background-color: #EDEDED;">
+        <div class="container">
+            <div class="testimonial py-5">
+                <div class="test-head">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-5 col-sm-6 col-12 pt-5">
+                            <div class="test-text">
+                                <h3 class="display-4 fw-bold text-center pb-5" style="color: #B91869;">Testimonials</h3>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 col-md-7 col-sm-6 col-12">
+                            <div class="test-image text-end" style="border-bottom: solid 1px rgb(201, 201, 201);padding-bottom: 35px;">
+                                <img src="tolu-img/landing-page-dots.png" class="img-fluid" alt="Testimonial Dots">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimony-person py-5">
+                    <div class="testimony-text">
+                        <p class="text-center fs-3 fw-bold">“Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...”</p>
+                    </div>
+                    <div class="testimony-name">
+                        <p class="text-center">JOHN DOE, JOURNALIST</p>
+                    </div>
+                    <div class="testifier text-center">
+                        <img src="tolu-img/testifier.png" class="img-fluid" alt="Testifier">
+                    </div>
+                    <div class="testimony-navigation text-center">
+                        <img src="tolu-img/nav-1.png" class="img-fluid" alt="Navigation">
+                        <img src="tolu-img/nav-2.png" class="img-fluid" alt="Navigation">
+                        <img src="tolu-img/nav-3.png" class="img-fluid" alt="Navigation">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- statistics section -->
+    <section id="statistics-section" class="text-white py-5" style="background-color: #0B131F;">
+        <div class="container">
+            <div class="statistics py-5">
+                <div class="statistics-head">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-4">
+                            <div class="statistics-head-text">
+                                <h3 class="display-4 fw-bold text-center">Stats</h3>
+                            </div>
+                        </div>
+                        <div class="col-lg-9 col-md-9 col-sm-9 col-8 ps-0">
+                            <div class="text-end" style="border-bottom: solid 1px rgb(201, 201, 201);padding-bottom: 35px;"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="statistics-body text-center" style="padding-top: 80px;">
+                    <div class="row align-items-center pb-5">
+                        <div class="col-lg-3 col-md-6 mb-5">
+                            <div class="stats border border-5 rounded-circle" style="width: 200px; height: 200px; margin: 0 auto;">
+                                <h3 class="display-4 fw-bold pt-5 mb-0">1.5M</h3>
+                                <p>Interactions</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 mb-5">
+                            <div class="stats border border-5 rounded-circle" style="width: 200px; height: 200px; margin: 0 auto;">
+                                <h3 class="display-4 fw-bold pt-5 mb-0 ">300K</h3>
+                                <p><strong>Unique </strong>Users</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 mb-5">
+                            <div class="stats border border-5 rounded-circle" style="width: 200px; height: 200px; margin: 0 auto;">
+                                <h3 class="display-4 fw-bold pt-5 mb-0 ">#1</h3>
+                                <p><strong>Top </strong>Ranking</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 mb-5">
+                            <div class="stats border border-5 rounded-circle" style="width: 200px; height: 200px; margin: 0 auto;">
+                                <h3 class="display-4 fw-bold pt-5 mb-0 ">750K</h3>
+                                <p>Followers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="statistics-bottom-text pb-5">
+                    <p class="mx-auto" style="font-size: 13px; width: 90%;"><strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</strong> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- contact section -->
+    <section id="contact-section" class="pb-5">
+        <div class="container">
+            <div class="contact text-white pb-5">
+                <div class="row justify-content-between">
+                    <div class="col-lg-6 col-md-6 pt-5">
+                        <div class="contact-content" style="padding-top: 80px;">
+                            <div class="contact-head pb-2">
+                                <h3 class="display-4">Contact</h3>
+                            </div>
+                            <div class="contact-text pb-5">
+                                <p style="font-size: 13px;" class="lh-lg"><strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</strong> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                            </div>
+                            <div class="progress" style="height: 3px;">
+                                <div class="progress-bar bg-white" role="progressbar" style="width: 10%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <div class="contact-social pt-4">
+                                <div class="row">
+                                    <div class="col-lg-4 col-md-6 col-5">
+                                        <p class="fs-2">Follow Us</p>
+                                    </div>
+                                    <div class="col-lg-8 col-md-6 col-md-3 col-7 pt-2">
+                                        <div class="row">
+                                            <div class="col-lg-3 col-md-3 col-3">
+                                                <img src="tolu-img/contact-facebook.png" alt="Facebook">
+                                            </div>
+                                            <div class="col-lg-3 col-md-3 col-3">
+                                                <img src="tolu-img/contact-twitter.png" alt="Twitter">
+                                            </div>
+                                            <div class="col-lg-3 col-md-3 col-3">
+                                                <img src="tolu-img/contact-youtube.png" alt="YouTube">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 col-md-6 py-5">
+                        <div class="form mt-5">
+                            <form action="#">
+                                <div class="form-checkbox mb-3">
+                                    <div class="row">
+                                        <div class="col-lg-1 col-md-1 col-1 pe-0">
+                                            <input type="checkbox" name="" id="checkbox" class="me-2">
+                                        </div>
+                                        <div class="col-lg-11 col-md-11 col-11 ps-0">
+                                            <label for="checkbox">Lorem Ipsum is simply dummy text of the printing</label>
+                                        </div>
+                                    </div>
+                                </div>
+                               <div class="row">
+                                   <div class="col-lg-6">
+                                        <div class="name-form mb-4">
+                                            <input type="text" name="name" class="form-control border-0 rounded-0" id="name" placeholder="Name" required>
+                                        </div>
+                                   </div>
+                                   <div class="col-lg-6">
+                                        <div class="lastname-form mb-4">
+                                            <input type="text" name="lastname" class="form-control border-0 rounded-0" id="lastname" placeholder="Last Name" required>
+                                        </div>
+                                    </div>
+                               </div>
+                               <div class="row">
+                                   <div class="col-lg-8">
+                                        <div class="email-form mb-4">
+                                            <input type="email" name="email" class="form-control border-0 rounded-0" id="email" placeholder="Email" required>
+                                        </div>
+                                   </div>
+                                   <div class="col-lg-4">
+                                       <div class="phone-form mb-4">
+                                           <input type="tel" name="phone" class="form-control border-0 rounded-0" id="phonenumber" placeholder="Phone..." required>
+                                       </div>
+                                   </div>
+                               </div>
+                               <div class="message-form mb-3">
+                                   <textarea name="message" id="message" class="border-0 rounded-0 text-white" placeholder="Message..." rows="10"></textarea>
+                              </div>
+                              <div class="send-form mt-4">
+                                  <a href="#" class="text-decoration-none text-color border border-white border-2" style="padding: 10px 50px;">Send</a>
+                              </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="navigation-section pt-5 overflow-hidden">
+            <div class="row">
+                <div class="col-lg-3 col-md-4 pe-0">
+                    <div class="container">
+                        <div class="logo-section">
+                            <div class="logo text-center">
+                                <img src="tolu-img/logo-white.png" class="img-fluid mb-5" alt="Company Logo">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-9 col-md-8">
+                    <div class="services-section">
+                        <div class="service-head text-center border-bottom text-color border-white">
+                            <p>Services</p>
+                        </div>
+                        <div class="service-content mt-2">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-2 col-md-2 px-0 text-center">
+                                    <ul class="ps-0"><a href="#" class="text-decoration-none text-color">Home</a></ul>
+                                </div>
+                                <div class="col-lg-2 col-md-2 px-0 text-center">
+                                    <ul class="ps-0"><a href="#" class="text-decoration-none text-color">The Mkutano</a></ul>
+                                    <ul class="ps-0"><a href="#" class="text-decoration-none text-color">Creative</a></ul>
+                                    <ul class="ps-0"><a href="#" class="text-decoration-none text-color">Incentive</a></ul>
+                                    <ul class="ps-0"><a href="#" class="text-decoration-none text-color">The Duara</a></ul>
+                                </div>
+                                <div class="col-lg-2 col-md-2 px-0 text-center">
+                                    <ul class="ps-0"><a href="#" class="text-decoration-none text-color">Partners</a></ul>
+                                </div>
+                                <div class="col-lg-2 col-md-3 px-0 text-center">
+                                    <ul class="ps-0"><a href="#" class="text-decoration-none text-color">Testimonials</a></ul>
+                                </div>
+                                <div class="col-lg-2 col-md-3 px-0 text-center">
+                                    <ul class="ps-0"><a href="#" class="text-decoration-none text-color">Contact</a></ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- footer section -->
+    <footer>
+        <div class="container-fluid text-white">
+            <div class="row">
+                <div class="col-lg-2 col-md-3 col-5 text-center copyright" style="background-color: #0B131F;">
+                    <p class="my-2">Copyright&reg; 2022</p>
+                </div>
+                <div class="col-lg-10 col-md-9 col-7 text-center terms" style="background-color: #B91869;">
+                    <p class="my-2">Terms and Conditions</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
   <!-- javascript -->
   <script src="js/bootstrap.min.js"></script>
