linked the style with the html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/simple-soul-style.css">
     <link rel="stylesheet" href="css/khalid-style.css">
     <link rel="stylesheet" href="css/section-6landingpage.css">
+    <link rel="stylesheet" href="css/tolu-style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/b353e23091.js" crossorigin="anonymous"></script>
