--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- custom css -->
+    
     <link rel="stylesheet" href="css/simple-soul-style.css">
+    <link rel="stylesheet" href="css/khalid-style.css">
     <link rel="stylesheet" href="section-6landingpage.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- font awesome -->
@@ -271,11 +273,209 @@
         </div>
       </div>   
   </section>
-    
+
+
+    <!-- Daura section -->
+    <div class="section-6 py-5" style="background: #0B131F;">
+        <div class="container">
+            <div class="row text-center py-1">
+                <div class="col-lg-6 md-12 sm-12">
+                    <div class="picture">
+                        <img src="khalid-img/Group.png" alt="group" style="width: 100%;">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-12">
+                    <div class="content d-flex justify-content-end pb-3 " style= "border-bottom: 2px white solid;">
+                        <img src="khalid-img/rec_icon.png" alt="nullcircle" style="height: 60px">
+                        <h1 class="px-3 fw-bolder" style="color: white; font-size: 64px;">The Duara</h1>
+                    </div>
+                  <div class="dejoke justice">
+                    <p class="text-start mt-3 lh-lg" style="color: white"; ><span class="fw-bold">Lorem ipsium is simply a dummy text of the printing and typesetting industry.</span> 
+                        Lorem Ipsium has been the industry's standard dummy text ever since the 1500s. 
+                        when an unknown printer took a gallery of type and scrambled it to make a type 
+                        specimen book. it has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining especially unchanged. 
+                     </p>
+                     <div class="content d-flex " >
+                         <img src="khalid-img/logo.png" alt="logo" style="height: 18px;">
+                         <p class="ps-2" style="color: white; "><span class="fw-bold">More</span> Info</p>
+                     </div>
+                  </div>
+                    <img src="khalid-img/exp_icon.png" alt="exp_icon" class="d-none d-lg-block" style="height: 70px; position: absolute; right: 50px; top: 440px;">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row justify-content-center my-5 text-center align-items-center mx-auto " style="padding: 10px 0;">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="card mx-auto" style="width: 18rem; margin-top: 10px;">
+                        <div class="card-img">
+                            <img src="khalid-img/colored.png" class="card-img-top" alt="...">
+                            <img src="khalid-img/rec_icon.png" alt="nullcircle" style="height: 30px; position: absolute; top: 15px; left: 20px;">
+                            <p class="fw-bolder" style=" position: absolute; top: 15px; right: 20px; color: white;">15:00'</p>
+                        </div>
+                        <div class="card-body" style="background: #B91869;">
+                            <h5 class="card-title" style="color: white;">Title Video</h5>
+                            <p class="card-text" style="color: rgb(186, 176, 176);">Lorem Ipsium has been the industry's standard dummy text ever since 1500s</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="card mx-auto mb-2" style="width: 18rem; margin-top: 10px;">
+                                <div class="card-img">
+                                    <img src="/khalid-img/greyed.png" class="card-img-top" alt="...">
+                                    <img src="khalid-img/rec_icon.png" alt="nullcircle" style="height: 30px; position: absolute; top: 15px; left: 20px;">
+                                    <p class="fw-bolder" style=" position: absolute; top: 15px; right: 20px; color: white;">15:00'</p>
+                                </div>
+                                <div class="card-body" style="background: #344155;">
+                                <h5 class="card-title" style="color: white;">Title Video</h5>
+                                <p class="card-text" style="color: rgb(186, 176, 176);">Lorem Ipsium hgas been the industry's standars dummy text ever since 1500s.</p>
+                                </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="card mx-auto" style="width: 18rem; margin-top: 10px;">
+                        <div class="card-img">
+                            <img src="khalid-img/greyed.png" class="card-img-top" alt="...">
+                            <img src="khalid-img/rec_icon.png" alt="nullcircle" style="height: 30px; position: absolute; top: 15px; left: 20px;">
+                            <p class="fw-bolder" style=" position: absolute; top: 15px; right: 20px; color: white;">15:00'</p>
+                        </div>
+                        <div class="card-body" style="background: #344155;">
+                            <h5 class="card-title" style="color: white;">Title Video</h5>
+                            <p class="card-text" style="color: rgb(186, 176, 176);">Lorem Ipsium hgas been the industry's standars dummy text ever since 1500s.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="khalid-img/slide.png" style="margin: 30px 0;" alt="slider">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Team section -->
+    <section class="team-section">
+        <div class="bg-prim text-center text-lg-start text-md-center text-sm-center py-4 text-white">
+            <div class="container px-5">
+                <div class="team-txt d-flex pb-2">
+                    <div class="tt-text">
+                        <h4 class="fs-2 fw-bold">Our <span class="for-red">Team</span></h4>
+                    </div>
+                    <h3 class="for-border mb-4"></h3>
+                </div>
+                <div class="for-img row text-center">
+                    <div class="col-lg-3 col-md-6 col-12 pt-3">
+                        <div class="fortop">
+                            <img src="khalid-img/Ellipse.png" alt="" class="top">
+                            <img src="khalid-img/Rectangle 2.png" alt="olamide" class="img-fluid">
+                        </div>
+                        <div class="trans">
+                            <h5>John Doe</h5>
+                            <p>Job Title Position</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12 pt-3">
+                        <div class="fortop">
+                            <img src="khalid-img/Ellipse.png" alt="" class="top">
+                            <img src="khalid-img/Rectangle 25.png" alt="olamide" class="img-fluid">
+                        </div>
+                        <div class="trans">
+                            <h5>John Doe</h5>
+                            <p>Job Title Position</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12 pt-3">
+                        <div class="fortop">
+                            <img src="khalid-img/Ellipse.png" alt="" class="top">
+                            <img src="khalid-img/Rectangle 3.png" alt="olamide" class="img-fluid">
+                        </div>
+                        <div class="trans">
+                            <h5>John Doe</h5>
+                            <p>Job Title Position</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12 pt-3">
+                        <div class="fortop">
+                            <img src="khalid-img/Ellipse.png" alt="" class="top">
+                            <img src="khalid-img/Rectangle 1.png" alt="olamide" class="img-fluid">
+                        </div>
+                        <div class="trans">
+                            <h5>John Doe</h5>
+                            <p>Job Title Position</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12 pt-3">
+                        <div class="fortop">
+                            <img src="khalid-img/Ellipse.png" alt="" class="top">
+                            <img src="khalid-img/Rectangle 12.png" alt="olamide" class="img-fluid">
+                        </div>
+                        <div class="trans">
+                            <h5>John Doe</h5>
+                            <p>Job Title Position</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12 pt-3">
+                        <div class="fortop">
+                            <img src="khalid-img/Ellipse.png" alt="" class="top">
+                            <img src= "khalid-img/Rectangle 14.png" alt="olamide" class="img-fluid">
+                        </div>
+                        <div class="trans">
+                            <h5>John Doe</h5>
+                            <p>Job Title Position</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12 pt-3">
+                        <div class="fortop">
+                            <img src="khalid-img/Ellipse.png" alt="" class="top">
+                            <img src="khalid-img/Rectangle 15.png" alt="olamide" class="img-fluid">
+                        </div>
+                        <div class="trans">
+                            <h5>John Doe</h5>
+                            <p>Job Title Position</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-12 pt-3">
+                        <div class="pt-5 group">
+                            <img src="khalid-img/Group 91.png" alt="team-member" class="img-fluid">
+                        </div>
+                    </div>
+                </div>               
+            </div>
+        </div>
+    </section>
+    <!-- partners section -->
+    <section id="our-partners-section" class="text-white" style="background-color: #B91869;">
+        <div class="container">
+            <div class="our-partners" style="padding: 100px 0 70px;">
+                <div class="partner-head border-bottom pb-4" style="width: 95%; margin: 0 auto;">
+                    <div class="row">
+                        <div class="col-lg-5 col-md-6 text-center pe-0">
+                            <div class="partner-title">
+                                <h2 class="display-4 fw-bold pb-3">Our <span class="partner-highlight" style="color: #45CB9C !important;">Partners</span></h2>
+                            </div>
+                        </div>
+                        <div class="col-lg-7 col-md-6">
+                            <p class="text-size ps-2"><strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry</strong>. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="partner-sponsors">
+                    <div class="sponsors-image pt-5 pb-5"> 
+                        <img src="khalid-img/landing-partner-sponsors.png" style="mix-blend-mode: screen;" class="img-fluid" alt="Sponsors">
+                    </div>
+                </div>
+                <div class="partner-dots">
+                    <div class="dots-image text-center pt-5">
+                        <img src="khalid-img/landing-partner-dots.png" class="img-fluid " alt="Navigations">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
   <!-- javascript -->
   <script src="js/bootstrap.min.js"></script>
   <script src="js/index.js"></script>
+
 
 
 </body>
